workaround: don't call find_package(threads)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,8 +39,12 @@ if(HAVE_PTHREAD_AFFINITY)
   target_compile_definitions(benchmark PRIVATE -DBENCHMARK_HAS_PTHREAD_AFFINITY)
 endif()
 
-# Link threads.
-target_link_libraries(benchmark PRIVATE Threads::Threads)
+# <aztec>
+# aztec google-benchmark change: We have threads available in wasi-threads but can't call find_package(THREADS)
+# This works around us being able to call benchmarks in wasmtime.
+## Link threads.
+# target_link_libraries(benchmark PRIVATE Threads::Threads)
+# </aztec>
 
 target_link_libraries(benchmark PRIVATE ${BENCHMARK_CXX_LIBRARIES})
 
